# study_cmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_build.txt  cmake_install.cmake  hello.cpp
second_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  build.error.txt  cmake_install.cmake
second_cmake/src/: a.c  c.h  main.c
